SET(LINK_SEARCH_START_STATIC ON)
SET(LINK_SEARCH_END_STATIC ON)

FILE(GLOB_RECURSE SRCH2_SHARDING_SRC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp")
					
MESSAGE(STATUS "CMAKE_REQUIRED_LIBRARIES="  ${CMAKE_REQUIRED_LIBRARIES})
MESSAGE(STATUS "Srch2InstantSearch_LIBRARIES="  ${Srch2InstantSearch_LIBRARIES} )

INCLUDE_DIRECTORIES(
	${CMAKE_BINARY_DIR}/include
	${CMAKE_SOURCE_DIR}/src/
	${CMAKE_SOURCE_DIR}/src/core
	${CMAKE_SOURCE_DIR}/src/wrapper
	${CMAKE_SOURCE_DIR}/src/server
	${CMAKE_SOURCE_DIR}/src/sharding
    ${Boost_INCLUDE_DIRS}
    ${CMAKE_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/thirdparty/event/include
    ${CMAKE_SOURCE_DIR}/thirdparty/json/jsoncpp-src-0.5.0/include
    ${CMAKE_SOURCE_DIR}/thirdparty/mongo-cxx-driver-v2.4/src
)

MESSAGE(STATUS "Srch2 source dir="  ${CMAKE_SOURCE_DIR} )
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-conversion -Wno-sign-compare")		

add_library(SHARDING_OBJECTS OBJECT ${SRCH2_SHARDING_SRC})
