SET(LINK_SEARCH_START_STATIC ON)
SET(LINK_SEARCH_END_STATIC ON)

FILE(GLOB_RECURSE SRCH2_SHARDING_SRC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp")
					
INCLUDE_DIRECTORIES(
	${CMAKE_BINARY_DIR}/include
	${CMAKE_SOURCE_DIR}/src/
    ${Boost_INCLUDE_DIRS}
    ${CMAKE_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/thirdparty/event/include
    ${CMAKE_SOURCE_DIR}/thirdparty/json/jsoncpp-src/include
)

SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-conversion -Wno-sign-compare")		

add_library(SHARDING_OBJECTS OBJECT ${SRCH2_SHARDING_SRC})
